--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/base
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+jwt.secret=miClaveSecretaParaFirmarTokens
+
 #server.servlet.context-path =/base
 #server.port =9000
 #spring.jpa.hibernate.ddl-auto = create-drop
