--- a/ScheduleFrontend/angular.json
+++ b/ScheduleFrontend/angular.json
@@ -33,7 +33,8 @@
               "src/styles.css",
 
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@ng-select/ng-select/themes/material.theme.css"
             ],
             "scripts": []
           },
@@ -96,6 +97,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@ng-select/ng-select/themes/material.theme.css",
               "src/styles.css"
             ],
             "scripts": []
