--- a/ScheduleFrontend/package.json
+++ b/ScheduleFrontend/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.2",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@ng-select/ng-select": "^13.8.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
     "boxicons": "^2.1.4",
