Ajuste back JWT

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -6,9 +6,9 @@
 #spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path =/base
 server.port =9000
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.datasource.url = jdbc:postgresql://localhost:5432/base
 spring.datasource.username = postgres
-spring.datasource.password=abcd1234
-jwt.secret=miClaveSecretaParaFirmarTokens
+spring.datasource.password=1234
+jwt.secret=cLfByBrS65LbusN5TdT1iHT3sNz0UCoC7x7yTpDHLCc
 
