--- a/ScheduleFrontend/package.json
+++ b/ScheduleFrontend/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.0",
     "boxicons": "^2.1.4",
     "express": "^4.18.2",
+    "ngx-file-drop": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
