--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9000
 spring.datasource.url=jdbc:mysql://localhost:3306/base
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #server.servlet.context-path =/base
 #server.port =9000
 #spring.jpa.hibernate.ddl-auto = update
